--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 <button id="next" class="nav next"aria-label="Next artwork">›</button>
             </div>   
         </div>
-        <div class="dots">
-
+        <div class="pagination">
         </div>
     </main>
    
