trying to make it center. I only can center when is first loaded. Made it loopable (going back to index 0 ), checking what size of the screen (weather if it should use small or large images)

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     </header>
     <main>
         <div class="slider">
-            <div class="slider-viewport">
+            <div class="slider-viewport" id="slider-viewport">
                 <button id="prev" class="nav prev" aria-label="Previous artwork">‹</button>
                     <div class="slider-list"></div>
                 <button id="next" class="nav next"aria-label="Next artwork">›</button>
+            </div>
+            <div class="carousel-caption" aria-live="polite">
+                <h2 id="carousel-title"></h2>
             </div>   
         </div>
         <div class="pagination">
