adding space on arial-label, moved pagination inside slider class

--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
     <header>
         <h1>Scenario B</h1>
     </header>
-    <main>
-        <div class="slider">
-            <div class="slider-viewport" id="slider-viewport">
-                <button id="prev" class="nav prev" aria-label="Previous artwork">‹</button>
-                    <div class="slider-list"></div>
-                <button id="next" class="nav next"aria-label="Next artwork">›</button>
+        <main>
+            <div class="slider">
+                <div class="slider-viewport" id="slider-viewport">
+                    <button id="prev" class="nav prev" aria-label="Previous artwork">‹</button>
+                        <div class="slider-list"></div>
+                    <button id="next" class="nav next" aria-label="Next artwork">›</button>
+                </div>
+                <div class="carousel-caption" aria-live="polite">
+                    <h2 id="carousel-title"></h2>
+                </div>   
+                <div class="pagination"></div>
             </div>
-            <div class="carousel-caption" aria-live="polite">
-                <h2 id="carousel-title"></h2>
-            </div>   
-        </div>
-        <div class="pagination">
-        </div>
-    </main>
+        </main>
    
     <script src="script.js"></script>
     <footer>
